--- a/certificates/src/app/common/components/lang/language.html
+++ b/certificates/src/app/common/components/lang/language.html
@@ -4,10 +4,10 @@
   </button>
   <div class="dropdown-menu">
     <a class="dropdown-item" href="#"
-       ng-show="$ctrl.$localStorage.globals.lang == 'ru'"
+       ng-show="$ctrl.$localStorage.lang === 'ru'"
        ng-click="$ctrl.changeLanguage('en')">English</a>
     <a class="dropdown-item" href="#"
-       ng-show="$ctrl.$localStorage.globals.lang == 'en'"
+       ng-show="$ctrl.$localStorage.lang === 'en'"
        ng-click="$ctrl.changeLanguage('ru')">Русский</a>
   </div>
 </div>
