--- a/certificates/src/app/components/auth/auth-form/auth-form.html
+++ b/certificates/src/app/components/auth/auth-form/auth-form.html
@@ -1,45 +1,20 @@
-
 <div class="row mx-md-n5 align-items-center">
   <div class="col px-md-5">
     <div class="p-3">
       <form name="userForm" ng-submit="$ctrl.submitForm()" novalidate>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email"
-                 name="emailInput"
-                 class="form-control"
-                 id="exampleInputEmail1"
-                 aria-describedby="emailHelp"
-                 placeholder="Enter email"
-                 ng-model="$ctrl.user.email"
-                 ng-maxlength="{{$ctrl.maxlength}}"
-                 required="true"
-                 ng-class="{'is-invalid': userForm.emailInput.$touched && userForm.emailInput.$invalid,
-                                            'is-valid': userForm.emailInput.$touched && userForm.emailInput.$valid}">
-          <div ng-show="userForm.emailInput.$error.maxlength" class="invalid-feedback">
-            Email is too long.
-          </div>
-          <div ng-show="userForm.emailInput.$touched && userForm.emailInput.$valid" class="valid-feedback">
-            Looks good!
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
 
-          <input type="password"
-                 name="passwordInput"
-                 class="form-control"
-                 id="exampleInputPassword1"
-                 placeholder="Password"
-                 ng-model="$ctrl.user.password"
-                 ng-minlength="{{$ctrl.minlength}}"
-                 required="true"
-                 ng-class="{'is-invalid': userForm.passwordInput.$touched && userForm.passwordInput.$invalid,
-                                            'is-valid': userForm.passwordInput.$touched && userForm.passwordInput.$valid}">
-          <div ng-show="userForm.passwordInput.$error.minlength" class="invalid-feedback">Password is too short.</div>
-        </div>
-        <button type="submit" class="btn btn-primary border" ng-disabled="userForm.$invalid">{{ $ctrl.button }}</button>
-        <a href="" ui-sref="{{$ctrl.link.state}}">{{$ctrl.link.name}}</a>
+        <form-field-component
+          field-model="$ctrl.emailFieldModel"
+          on-update="$ctrl.updateEmail($event);">
+        </form-field-component>
+
+        <form-field-component
+          field-model="$ctrl.passwordFieldModel"
+          on-update="$ctrl.updatePassword($event);">
+        </form-field-component>
+
+        <button type="submit" class="btn btn-primary border" ng-disabled="userForm.$invalid">{{'LOGIN' | translate}}</button>
+        <a href="" ui-sref="$ctrl.stateConstants.AUTH_REGISTRATION.name">{{'REGISTER' | translate}}</a>
       </form>
     </div>
   </div>
