--- a/certificates/src/app/components/home/certificate-tag/certificate-tag.html
+++ b/certificates/src/app/components/home/certificate-tag/certificate-tag.html
@@ -9,6 +9,6 @@
     <a href="#"
        ng-repeat="tag in $ctrl.tags"
        class="btn btn-warning btn-sm ml-1 mr-1 mt-1"
-       ng-click="$ctrl.addTag($index)">{{tag.name}}</a>
+       ng-click="$ctrl.addTag($index)">{{tag}}</a>
   </div>
 </div>
