--- a/certificates/src/app/components/home/certificates/certificates.html
+++ b/certificates/src/app/components/home/certificates/certificates.html
@@ -60,9 +60,7 @@
 </div>
 
 <pagination-component
-  items-number="$ctrl.number"
-  current-page="$ctrl.currentPage"
-  page-size="$ctrl.pageSize"
+  pager-props="$ctrl.pagerProps"
   on-page-change="$ctrl.onPageChange($event)">
 </pagination-component>
 
