--- a/certificates/src/app/common/components/pagination/pagination.html
+++ b/certificates/src/app/common/components/pagination/pagination.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-md-center"
-     ng-show="$ctrl.itemsNumber && $ctrl.itemsNumber > $ctrl.pageSize">
+     ng-show="!!$ctrl.pager && $ctrl.pager.totalItems > $ctrl.pager.pageSize">
   <ul ng-if="$ctrl.pager.pages.length" class="pagination">
     <li class="page-item" ng-class="{disabled:$ctrl.pager.currentPage === 1}">
       <a class="page-link" href="#" ng-click="$ctrl.setPage(1)">{{'BUTTON_FIRST' | translate}}</a>
