--- a/certificates/src/app/components/home/certificate-tag/certificate-tag.html
+++ b/certificates/src/app/components/home/certificate-tag/certificate-tag.html
@@ -1,14 +1,16 @@
-<div class="mb-3" ng-keydown="$ctrl.onKeyboardEvent($event)">
+<div class="mb-3">
 
-  <span ng-if="!!$ctrl.tags.length">{{'TAGS' | translate}}:</span>
-  <div ui-sortable="$ctrl.sortableOptions"
-       ng-model="$ctrl.tags"
-       ng-style="{'min-height': '2px'}"
-       class="tags-container">
+  <div ng-if="$ctrl.tags && $ctrl.tags.length > 0">
+    <span>{{'TAGS' | translate}}:</span>
+    <div ui-sortable="$ctrl.sortableOptions"
+         ng-model="$ctrl.tags"
+         ng-style="{'min-height': '2px'}"
+         class="tags-container">
 
-    <a href="#"
-       ng-repeat="tag in $ctrl.tags"
-       class="btn btn-warning btn-sm ml-1 mr-1 mt-1"
-       ng-click="$ctrl.addTag($index)">{{tag}}</a>
+      <a href="#"
+         ng-repeat="tag in $ctrl.tags"
+         class="btn btn-warning btn-sm ml-1 mr-1 mt-1"
+         ng-click="$ctrl.addTag(tag)">{{tag}}</a>
+    </div>
   </div>
 </div>
