--- a/certificates/src/app/common/components/app-nav/app-nav.html
+++ b/certificates/src/app/common/components/app-nav/app-nav.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-4 bg-white border-bottom shadow-sm">
   <h5 class="my-0 mr-md-auto">{{'CERTIFICATES' | translate}}</h5>
   <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark">{{$ctrl.$rootScope.user.email}}</a>
+    <a class="p-2 text-dark">{{$ctrl.user.email}}</a>
     <button type="button"
-            ng-if="$ctrl.user && $ctrl.user.isAdmin && !$ctrl.$state.includes('certificate-add')"
+            ng-if="this.user && this.user.role === 'ADMIN' && !$ctrl.$state.includes('certificate-add')"
             class="btn btn-success btn-sm mr-1"
             ng-click="$ctrl.goToAddCertificate()">{{'BUTTON_ADD' | translate}}</button>
     <language-component></language-component>
