--- a/certificates/src/app/components/home/certificates/certificates.html
+++ b/certificates/src/app/components/home/certificates/certificates.html
@@ -51,7 +51,7 @@
   <certificate certificate="certificate"
                on-add-tag="$ctrl.addQueryTag($event);"
                on-buy-certificate="$ctrl.onCertificateProductChange($event);"
-               on-certificate-product-change="$ctrl.onCertificateProductChange($event);"
+               on-certificate-product-change="$ctrl.onCertificateProductChange($event, certificate);"
                class="m-3"
                style="cursor: move;"
                ng-repeat="certificate in $ctrl.items">
