Some changes with edding and buy/cell. But it still needs to be improved.

--- a/certificates/src/app/components/home/certificate-edit/certificate-edit.html
+++ b/certificates/src/app/components/home/certificate-edit/certificate-edit.html
@@ -1,4 +1,5 @@
 <certificate-form
+  certificate="$ctrl.certificate"
   action-name="'EDIT_CERTIFICATE' | translate"
   button-name="'BUTTON_EDIT' | translate"
   on-submit="$ctrl.updateCertificate($event)">
