--- a/certificates/src/app/components/home/certificate/certificate.html
+++ b/certificates/src/app/components/home/certificate/certificate.html
@@ -8,7 +8,7 @@
       <certificate-tag
         tags="$ctrl.certificate.tags"
         on-add-tag="$ctrl.addTag($event);"
-        on-update-tags="$ctrl.updateTags($event);">
+        on-update-tags="$ctrl.onUpdateTags($event);">
       </certificate-tag>
     </p>
 
