--- a/certificates/src/app/components/home/certificate-form/certificate-from.html
+++ b/certificates/src/app/components/home/certificate-form/certificate-from.html
@@ -43,7 +43,7 @@
           <span>{{'TAGS' | translate}}:</span>
           <button ng-click="$ctrl.deleteTag(tag)" type="button" ng-repeat="tag in $ctrl.certificate.tags"
                   class="btn btn-warning btn-sm mr-1 ml-1 mb-1">
-            {{tag.name}}
+            {{tag}}
           </button>
         </div>
       </div>
