--- a/certificates/src/app/components/home/certificate-tag/certificate-tag.html
+++ b/certificates/src/app/components/home/certificate-tag/certificate-tag.html
@@ -1,16 +1,14 @@
 <div class="mb-3">
 
-  <div ng-if="$ctrl.tags && $ctrl.tags.length > 0">
-    <span>{{'TAGS' | translate}}:</span>
-    <div ui-sortable="$ctrl.sortableOptions"
-         ng-model="$ctrl.tags"
-         ng-style="{'min-height': '2px'}"
-         class="tags-container">
+  <span ng-if="$ctrl.tags && $ctrl.tags.length > 0">{{'TAGS' | translate}}:</span>
+  <div ui-sortable="$ctrl.sortableOptions"
+       ng-model="$ctrl.tags"
+       ng-style="{'min-height': '3px'}"
+       class="tags-container">
 
-      <a href="#"
-         ng-repeat="tag in $ctrl.tags"
-         class="btn btn-warning btn-sm ml-1 mr-1 mt-1"
-         ng-click="$ctrl.addTag(tag)">{{tag}}</a>
-    </div>
+    <a href="#"
+       ng-repeat="tag in $ctrl.tags"
+       class="btn btn-warning btn-sm ml-1 mr-1 mt-1"
+       ng-click="$ctrl.addTag(tag)">{{tag}}</a>
   </div>
 </div>
